--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "ios:xcode": "open ios/MyProject.xcworkspace/ -a Xcode.app"
   },
   "dependencies": {
     "react": "18.2.0",
